--- a/mycss/desk2.less
+++ b/mycss/desk2.less
@@ -44,7 +44,7 @@ body{
       align-items: center;
       justify-content: center;
 
-      .src>span{
+      .chair>span{
         background: #FEC6AF;
         position: absolute;
         text-align: center;
@@ -55,7 +55,7 @@ body{
         line-height: 40px;
         border-radius: 20px;
       }
-      .src>.people{
+      .chair>.people{
         position: relative;
         top:0;
         left:0;
@@ -90,6 +90,8 @@ body{
     background: #00688F;
     margin-right: 20px;
     .people{
+      position: static;
+      z-index: 20;
       color: white;
       width:100px;
       height:100px;
