--- a/mycss/desk2.less
+++ b/mycss/desk2.less
@@ -3,7 +3,7 @@ body{
   position: relative;
 }
 
-.img{
+.img,.trash_img{
   width:200px;
   height:200px;
   position:absolute;
@@ -12,6 +12,14 @@ body{
   background-size: cover;
   /*height:100px;*/
   /*border-radius: 50px;*/
+}
+.trash_img{
+  width:150px;
+  height:150px;
+  background: url(../img/trash.png) no-repeat;
+  background-size: contain;
+
+
 }
 
 .container{
@@ -29,10 +37,14 @@ body{
   #workSpace{
     position: relative;
     margin:0 auto;
-    #mother,#motherBackground{
+    #mother,#motherBackground,#trash{
       left:-300px;
       top:0;
       z-index: 10;
+    }
+    #trash{
+      top:250px;
+      left:-280px;
     }
 
     //桌子及 内部内容 相对于 chariarea
@@ -47,8 +59,9 @@ body{
       .chair{
         z-index: 10;
       }
-      .chair>span{
-        background: #FEC6AF;
+      .chair>input{
+        background: #93CFE7;
+        color:white;
         position: absolute;
         text-align: center;
         height:40px;
@@ -62,7 +75,7 @@ body{
         position: relative;
         top:0;
         left:0;
-        z-index: 11;
+        z-index: 20;
         color: white;
         width:100px;
         height:100px;
@@ -86,6 +99,14 @@ body{
         top:50%;
         transform:translate(-400px,-250px);
         -ms-transform: translate(-400px,-250px);
+        .btn{
+          position: absolute;
+          top:50%;
+          left:50%;
+          width:100px;
+          height: 60px;
+
+        }
       }
   }
   }
@@ -98,6 +119,7 @@ body{
     background: #00688F;
     margin-right: 20px;
     .people{
+      float: left;
       position: static;
       z-index: 20;
       color: white;
