--- a/mycss/desk2.css
+++ b/mycss/desk2.css
@@ -59,10 +59,10 @@ body {
   color: white;
   position: absolute;
   text-align: center;
-  height: 40px;
-  width: 40px;
-  top: 0;
-  left: 50%;
+  height: 20px;
+  width: 100px;
+  bottom: 0;
+  left: 20%;
   line-height: 40px;
   border-radius: 20px;
 }
