--- a/mycss/desk2.less
+++ b/mycss/desk2.less
@@ -18,8 +18,9 @@ body{
   height:150px;
   background: url(../img/trash.png) no-repeat;
   background-size: contain;
+  &:hover{
 
-
+  }
 }
 
 .container{
@@ -64,10 +65,10 @@ body{
         color:white;
         position: absolute;
         text-align: center;
-        height:40px;
-        width:40px;
-        top:0;
-        left:50%;
+        height:20px;
+        width:100px;
+        bottom:0;
+        left:20%;
         line-height: 40px;
         border-radius: 20px;
       }
