--- a/mycss/desk2.less
+++ b/mycss/desk2.less
@@ -82,9 +82,7 @@ body{
             display:block;
           }
         }
-        position: relative;
-        top:0;
-        left:0;
+        position: absolute;
         font-size: 10px;
         z-index: 20;
         color: white;
@@ -135,8 +133,9 @@ body{
       cursor: pointer;
       >div{
         position: relative;
-        top:50px;
+        top:55px;
         span{
+          font-size: 10px;
           border-left: solid 1px;
           display:block;
           background: rgba(255,0,0,.3);
@@ -148,7 +147,7 @@ body{
           background: rgba(0,0,255,.3);
         }
       }
-      font-size: 10px;
+      //font-size: 10px;
       float: left;
       //position: static;
       z-index: 20;
