--- a/mycss/desk2.css
+++ b/mycss/desk2.css
@@ -4,22 +4,20 @@ body {
   position: relative;
 }
 .img {
-  width: 8.5rem;
-  height: 8.5rem;
+  width: 100px;
+  height: 100px;
+  color: #9e9e9e;
   position: absolute;
-  background: url(../img/chair.png) no-repeat;
-  background-position: top center;
-  background-size: cover;
-  z-index: 10;
+  z-index: 11;
   /*height:100px;*/
   /*border-radius: 50px;*/
 }
 .trash_img {
-  width: 6.8rem;
-  height: 6.8rem;
+  width: 100px;
+  height: 100px;
   z-index: 10;
-  transform: translate(8.5rem, 0);
-  -ms-transform: translate(8.5rem, 0);
+  transform: translate(10rem, 0);
+  -ms-transform: translate(10rem, 0);
   background: url(../img/trash.png) no-repeat;
   background-position: top center;
   background-size: contain;
@@ -30,30 +28,33 @@ body {
   clear: both;
 }
 .container #workSpace {
+  width: 100rem;
   overflow: hidden;
   position: relative;
 }
 .container #workSpace #chairsArea {
   box-sizing: border-box;
-  float: left;
-  z-index: 0;
-  position: relative;
-  width: 83rem;
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 80rem;
   background: #2E7555;
 }
 .container #workSpace #chairsArea .chair {
-  z-index: 10;
+  font-size: 100px;
+  z-index: 20;
   box-sizing: border-box;
 }
 .container #workSpace #chairsArea .chair > input {
-  background: #DC8526;
+  background: #f95800;
   color: white;
   position: absolute;
   text-align: center;
   height: 20px;
   width: 100px;
-  bottom: 0;
-  left: 20%;
+  bottom: -25px;
+  left: 0;
   line-height: 20px;
   border-radius: 20px;
 }
@@ -82,16 +83,16 @@ body {
 }
 .container #workSpace #chairsArea #desk {
   box-sizing: border-box;
-  width: 50rem;
-  height: 25rem;
+  width: 650px;
+  height: 400px;
   border-radius: 6.25rem;
   background-color: cadetblue;
   border: 1.25rem solid #d8d8d8;
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-25rem, -12.5rem);
-  -ms-transform: translate(-25rem, -12.5rem);
+  transform: translate(-325px, -200px);
+  -ms-transform: translate(-325px, -200px);
 }
 .container #workSpace #chairsArea #desk .btn {
   position: absolute;
@@ -102,33 +103,33 @@ body {
 }
 .container #workSpace #rightArea {
   box-sizing: border-box;
-  width: 17rem;
-  position: relative;
-  background: rgba(255, 0, 0, 0.5);
-  margin-left: 83rem;
+  width: 20rem;
+  position: absolute;
+  z-index: 10;
+  background: #93cfe7;
+  transform: translate(80rem, 0);
 }
 .container #workSpace #rightArea #mother,
 .container #workSpace #rightArea #motherBackground {
+  z-index: 1;
   top: 0;
   left: 0;
+  font-size: 100px;
 }
 .container #workSpace #people {
   overflow: hidden;
-  width: 17rem;
+  width: 20rem;
   position: absolute;
+  z-index: 10;
   top: 0;
   right: 0;
   height: 800px;
   background: #00688F;
-  margin-right: 20px;
 }
 .container #workSpace #people .people {
   cursor: pointer;
   float: left;
-  z-index: 20;
   color: white;
-  width: 100px;
-  height: 100px;
   background: url(../img/people.png) no-repeat;
   background-position: top center;
   background-size: cover;
