--- a/mycss/desk2.less
+++ b/mycss/desk2.less
@@ -3,26 +3,39 @@ body{
   padding:0;
   position: relative;
 }
-@left_width:83rem;
+@left_width:80rem;
+@left_color:#2E7555;
 @right_width:100-@left_width;
+@right_color:#93CFE7;
 @desk_width:50rem;
 @desk_height:@desk_width*.5;
 @desk_border_width:@desk_height*.05;
+@chair_font:100px;
+@chair_color:#9E9E9E;
+@chair_input_color:#F95800;
+
+
 
 .img{
-  width:@right_width*.5;
-  height:@right_width*.5;
+  width:100px;
+  //@right_width*.5;
+  height:100px;
+  //@right_width*.5;
+  color: @chair_color;
   position:absolute;
-  background: url(../img/chair.png) no-repeat;
-  background-position: top center;
-  background-size: cover;
-  z-index: 10;
+  //background: url(../img/chair.png) no-repeat;
+  //background-position: top center;
+  //background-size: cover;
+    z-index: 11;
   /*height:100px;*/
   /*border-radius: 50px;*/
 }
+
 .trash_img{
-  width:@right_width*.4;
-  height:@right_width*.4;
+  width:100px;
+  //@right_width*.4;
+  height:100px;
+  //@right_width*.4;
   z-index: 10;
   transform: translate(@right_width*.5,0);
   -ms-transform: translate(@right_width*.5,0);
@@ -34,31 +47,23 @@ body{
 }
 
 .container{
-  //width:100rem;
-  //display:flex;
-  //align-items: center;
-  //justify-content: center;
-  //width:1500px;
-  //margin改后需要 在 pageY中做相应调整
-  //&:before{
-  //  content: "";
-  //  display: table;
-  //}
+
   &:after{
     content:"";
     display:block;
     clear: both;
 }
   #workSpace{
-    //width:100rem;
+    width:100rem;
     overflow: hidden;//解决白边问题
     position: relative;
     //桌子及 内部内容 相对于 chariarea
     #chairsArea{
       box-sizing: border-box;
-      //float:left;
-      z-index: -1;
-      position: relative;
+      z-index: 1;
+      position: absolute;
+      left:0;
+      top:0;
       width:@left_width;
       //height:800px;
       background: #2E7555;
@@ -66,18 +71,19 @@ body{
       //align-items: center;
       //justify-content: center;
       .chair{
-        z-index: 10;
+        font-size: @chair_font;
+        z-index:20;
         box-sizing: border-box;
       }
       .chair>input{
-        background: #DC8526;
+        background: @chair_input_color;
         color:white;
         position: absolute;
         text-align: center;
         height:20px;
         width:100px;
-        bottom:0;
-        left:20%;
+        bottom:-25px;
+        left:0;
         line-height: 20px;
         border-radius: 20px;
       }
@@ -108,16 +114,21 @@ body{
       }
       #desk{
         box-sizing: border-box;
-        width:@desk_width;
-        height:@desk_height;
+        width:650px;
+        //@desk_width;
+        height:400px;
+        //@desk_height;
         border-radius: .25*@desk_height;
         background-color: cadetblue;
         border:@desk_border_width solid #D8D8D8;
         position: absolute;
         left:50%;
         top:50%;
-        transform:translate(-.5*@desk_width,-.5*@desk_height);
-        -ms-transform: translate(-.5*@desk_width,-.5*@desk_height);
+       // transform:translate(-.5*@desk_width,-.5*@desk_height);
+        //-ms-transform: translate(-.5*@desk_width,-.5*@desk_height);
+        transform:translate(-325px,-200px);
+        -ms-transform: translate(-325px,-200px);
+
         .btn{
           position: absolute;
           top:50%;
@@ -132,14 +143,17 @@ body{
       box-sizing: border-box;
       width:@right_width;
       //height:800px;
-      position: relative;
-      background: rgba(255,0,0,.5);
-      margin-left:@left_width;
+      position: absolute;
+      z-index: 10;
+      background: @right_color;
+      transform:translate(@left_width,0);
       //transform: translate(20rem,0);
       //-ms-transform: translate(20rem,0);
       #mother,#motherBackground{
+        z-index: 1;
         top:0;
         left:0;
+        font-size: @chair_font;
       }
       #trash{
       }
@@ -148,10 +162,12 @@ body{
       overflow: hidden;
       width:@right_width;
       position: absolute;
+      z-index: 10;
       top:0;
       right:0;
+      height:800px;
       background: #00688F;
-      margin-right: 20px;
+      //margin-right: 20px;
       .people{
         cursor: pointer;
         >div{
@@ -173,10 +189,10 @@ body{
         //font-size: 10px;
         float: left;
         //position: static;
-        z-index: 1;
+        //z-index: 20;
         color: white;
-        width:100px;
-        height:100px;
+        //width:50px;
+        //height:50px;
         background: url(../img/people.png) no-repeat;
         background-position: top center;
         background-size: cover;
